<resources>

    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="tipe_pelanggan">Tipe Pelanggan</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="biasa">Biasa</string>
    <string name="android">Android</string>
    <string name="iphone">Iphone</string>
    <string name="windows_phone">Windows Phone</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="proses">PROSES</string>
    <string name="cancel">CANCEL</string>
    <string name="alamat_pelanggan">Alamat Pelanggan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="kuisegilarasati">kuisegilarasati</string>
    <string name="nota_transaksi">NOTA TRANSAKSI</string>
    <string name="tipe_member">Tipe Member :</string>
    <string name="nama_barang">Nama Barang :</string>
    <string name="harga">Harga :</string>
    <string name="total_harga">Total Harga :</string>
    <string name="disc_harga">Disc. Harga :</string>
    <string name="disc_member">Disc. Member :</string>
    <string name="jumlah_bayar">Jumlah Bayar :</string>
    <string name="print_nota">PRINT NOTA</string>
    <string name="namapelanggan">Nama Pelanggan :</string>
    <string name="jeniskelamin">Jenis Kelamin :</string>
    <string name="alamatpelanggan">Alamat Pelanggan :</string>
    <string name="jumlahbarang">Jumlah Barang :</string>
    <string name="terimakasih_sudah_berbelanja_ditempat_kami">Terimakasih Sudah Berbelanja ditempat Kami</string>
</resources>