<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="25dp"
    android:orientation="vertical">

    <TextView
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_transaksi"
        android:gravity="center_horizontal"/>
    <TextView
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/tipeMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipe_member"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/nmPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namapelanggan"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/jnsKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jeniskelamin"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/altPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamatpelanggan"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/namaBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_barang"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/jumlahBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlahbarang"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/hargaBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/totalHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_harga"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/discHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disc_harga"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/discMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disc_member"
            />
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/jumlahBayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_bayar"
            />
    </LinearLayout>

    <TextView
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terimakasih_sudah_berbelanja_ditempat_kami"
        android:layout_marginBottom="30dp"/>

    <Button
        android:backgroundTint="#8F5C5C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/print_nota"/>
</LinearLayout>